# smtp4devpy

./: .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: tests.yml
docs/source/: api.rst  conf.py  license.rst
smtp4dev/: message.py  smtp4dev.py
tests/: test_message.py  test_smtp4dev.py
