[tool.poetry]
name = "smtp4dev"
version = "0.1.0"
description = ""
authors = ["Guillaume Pasquet <guillaume.pasquet@plentific.com>"]

[tool.poetry.dependencies]
python = "^2.7"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
